--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
             I<span class="text-primary">'</span>m
           </h1>
           <div class="subheading mb-3">
-            an <br />
-            enthusiast about <br />
+            an enthusiast of <br />
             Data Analysis & <br />
             Human Behavior
           </div>
@@ -61,7 +60,7 @@
         <div class="resume-section-content">
           <h2 class="mb-5">Profile</h2>
           <p>
-            In the process of assisting a friend to launch a business, I came into contact with marketing and Google Ads. This experience gave me a strong interest in and enthusiasm for marketing strategies, data analysis and UX design. I began to learn various marketing techniques and data analysis skills, including marketing methods that engage the unconscious mind through behavioral science and consumer psychology. <br />
+            In the process of assisting a friend to launch a business, I came into contact with marketing and Google Ads. This experience gave me a strong interest in and enthusiasm for marketing strategies, data analysis and user experience. I began to learn various marketing techniques and data analysis skills, including marketing methods that engage the unconscious mind through behavioral science and consumer psychology. <br />
             <br />
             I have combined this study of influencing consumer decisions with research into designing products and services that provide excellent user experiences. These insights into interactive experiences between users and products or services enable me to formulate strategies to powerfully influence consumer decisions. To better collect and analyse data to inform market research, I have also learned the Python programming language.
           </p>
@@ -124,7 +123,7 @@
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              UX Design
+              Data Visualization
             </li>
           </ul>
           <br />
@@ -184,7 +183,7 @@
               <h3 class="mb-0">Assistant</h3>
               <div class="subheading mb-3">La-Fu Co., Ltd.</div>
               <p>
-                • Assisted business growth. <br />
+                • Assisted increase sales. <br />
                 • Created leaflets and posters for marketing campaign. <br />
                 • Operated Google Ads.
               </p>
@@ -198,6 +197,7 @@
               <h3 class="mb-0">Deputy Account Manager</h3>
               <div class="subheading mb-3">Jung-Shin Assets Management Co., Ltd.</div>
               <p>
+                • Business development.
                 • Cold call and interacted with clients. <br />
                 • Collect and analyse client properties, including salary, real estate, etc. <br />
                 • Executed process of civil lawsuit and judicial attachment.
