--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolios">Portfolios</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
           </li>
         </ul>
       </div>
@@ -94,6 +94,12 @@
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
+              Intercultural Fluency
+            </li>
+            <li>
+              <span class="fa-li">
+                <i class="far fa-circle"></i>
+              </span>
               Ability to Work Under Pressure
             </li>
           </ul>
@@ -105,25 +111,31 @@
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              STP Analysis with Python
+              Data Analysis with Python
             </li>
             <li>
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
-              Search Engine Marketing
-            </li>
-            <li>
-              <span class="fa-li">
-                <i class="far fa-circle"></i>
-              </span>
-              Behavioral Economics
+              Behavioral Strategy
             </li>
             <li>
               <span class="fa-li">
                 <i class="far fa-circle"></i>
               </span>
               Data Visualization
+            </li>
+            <li>
+              <span class="fa-li">
+                <i class="far fa-circle"></i>
+              </span>
+              Spreadsheets
+            </li>
+            <li>
+              <span class="fa-li">
+                <i class="far fa-circle"></i>
+              </span>
+              Negotiating
             </li>
           </ul>
           <br />
@@ -183,7 +195,7 @@
               <h3 class="mb-0">Assistant</h3>
               <div class="subheading mb-3">La-Fu Co., Ltd.</div>
               <p>
-                • Assisted increase sales. <br />
+                • Cost analysis, data collection and pricing. <br />
                 • Created leaflets and posters for marketing campaign. <br />
                 • Operated Google Ads.
               </p>
@@ -246,7 +258,7 @@
         </div>
       </section>
       <hr class="m-0" />
-      <section class="resume-section" id="portfolios">
+      <section class="resume-section" id="portfolio">
         <div class="resume-section-content">
           <h2 class="mb-5">Portfolios</h2>
           <ul class="fa-ul mb-0">
@@ -254,19 +266,19 @@
               <span class="fa-li">
                 <i class="fas fa-external-link-alt"></i>
               </span>
-              <a href="portfolios/data_analysis_1.html" target="_blank" rel="noopener noreferrer">Data Analysis 1</a>
+              <a href="portfolio/data_analysis_1.html" target="_blank" rel="noopener noreferrer">Data Analysis 1</a>
             </li>
             <li>
               <span class="fa-li">
                 <i class="fas fa-external-link-alt"></i>
               </span>
-              <a href="portfolios/data_analysis_2.html" target="_blank" rel="noopener noreferrer">Data Analysis 2</a>
+              <a href="portfolio/data_analysis_2.html" target="_blank" rel="noopener noreferrer">Data Analysis 2</a>
             </li>
             <li>
               <span class="fa-li">
                 <i class="fas fa-external-link-alt"></i>
               </span>
-              <a href="portfolios/data_analysis_3.html" target="_blank" rel="noopener noreferrer">Data Analysis 3</a>
+              <a href="portfolio/data_analysis_3.html" target="_blank" rel="noopener noreferrer">Data Analysis 3</a>
             </li>
           </ul>
         </div>
