--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="resume-section-content">
           <h2 class="mb-5">Profile</h2>
           <p>
-            In the process of assisting a friend to launch a business, I came into contact with marketing and Google Ads. This experience gave me a strong interest in and enthusiasm for marketing strategies, data analysis and user experience. I began to learn various marketing techniques and data analysis skills, including marketing methods that engage the unconscious mind through behavioral science and consumer psychology. <br />
+            In the process of assisting a friend to launch a business, I came into contact with marketing and Google Ads. This experience gave me a strong interest in and enthusiasm for marketing strategies, data analysis and user experience. I began to learn various marketing techniques and data analysis skills, including marketing methods that engage the unconscious mind through behavioral economics and consumer psychology. <br />
             <br />
             I have combined this study of influencing consumer decisions with research into designing products and services that provide excellent user experiences. These insights into interactive experiences between users and products or services enable me to formulate strategies to powerfully influence consumer decisions. To better collect and analyse data to inform market research, I have also learned the Python programming language.
           </p>
@@ -260,7 +260,7 @@
       <hr class="m-0" />
       <section class="resume-section" id="portfolio">
         <div class="resume-section-content">
-          <h2 class="mb-5">Portfolios</h2>
+          <h2 class="mb-5">Portfolio</h2>
           <ul class="fa-ul mb-0">
             <li>
               <span class="fa-li">
