--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           <h2 class="mb-5">Experience</h2>
           <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
-              <h3 class="mb-0">Assistant</h3>
+              <h3 class="mb-0">Administration Staff</h3>
               <div class="subheading mb-3">La-Fu Co., Ltd.</div>
               <p>
                 • Cost analysis, data collection and pricing. <br />
